# sample-project

./: CMakeLists.txt
doc/: CMakeLists.txt  example.doxygen
lib/: CMakeLists.txt  lib.c  lib.h
test/: CMakeLists.txt  test0.h.cpp  test1.h.cpp
